# auto-story-tools

./: .env.example  .gitignore  ANTI-PATTERNS.md  ANTI-SLOP.md  ARCHITECTURE.md  CONTRIBUTING.md  PIPELINE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: CRAFT.md  INTEGRATIONS.md  auto-outline-original-readme.md
integrations/: README.md
integrations/openclaw/: README.md
src/auto_outline/: __init__.py  cli.py  engine.py  provider.py  state.py
src/auto_outline/evaluation/: __init__.py  consistency.py  foundation_judge.py  mechanical.py  reader_panel.py
src/auto_outline/generators/: __init__.py  canon.py  characters.py  foreshadowing.py  mystery.py  outline.py  seed.py  voice.py  world.py
src/auto_screenplay/: README.md  __init__.py  cli.py
tests/: test_mechanical.py  test_provider.py  test_state.py
